feat(group): delta membership add/remove + cluster-safe atomic provisioning
Two efficiency/correctness follow-ups to LDAP-federated group membership,
plus the test-isolation fix that surfaced while validating them.

- Delta-driven additions (Follow-up A): the SCOPE_GROUP worker adds only
  groups not already in the per-component propagated set and removes only
  those gone, success-tracked — so a steady-state re-import sends zero SCIM
  PATCHes instead of one ADD per member per group per sync. The ADD path's
  'no SCIM mapping' now means not-applied/retry (return !isAdd), the mirror
  of REMOVE's 'nothing to remove', preserving the lazy-import-lag self-heal.

- Cluster-safe atomic first-provisioning: concurrent member-import workers
  could each POST /Groups for the same unprovisioned group and persist a
  duplicate mapping (PK collision -> worker rollback, or NonUnique on a
  later add). provisionGroupForMembership now does a lock-free pre-check,
  then takes a PESSIMISTIC_WRITE lock on a single seeded SCIM_PROVISION_LOCK
  row (new ScimProvisionLock entity + changeset) held until commit, so
  exactly one POST/mapping happens, across cluster nodes. A nested
  transaction was tried first but Keycloak's Quarkus runtime gives a
  freshly-nested worker session no EntityManagerFactory.

- Test isolation: the removal IT mutates the shared OpenLDAP group member
  list; a @BeforeEach restores the seeded membership so later tests in the
  class don't see a member missing from the group.

Verified: unit suite; ScimLdapGroupMembershipIT on KC 25.0.6 and 26.6.2;
ScimGroupPropagationIT + ScimGroupReconcileIT on 25.0.6.